# robot_api_test

./: .gitignore  README.md  base.resource  pyproject.toml
Resources/asserts/: assert_get_order.robot  assert_post_order.robot
Resources/requests/: get_order.robot  post_order.robot
Resources/services/order/: get_order.resource  post_order.resource
Resources/services/order/json/: items_list.json
Resources/session/: order_session.resource  order_session.robot
Resources/test_data/: test_data.yaml
Suite/: Criação de Pedido de Venda.robot  Pesquisa de Pedido de Venda.robot
log/: log.html  output.xml  report.html
test/: BuscarPedidoVenda.robot  CriarPedidoVenda.robot
